--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
         Grr. grumble grrr...Grrrrr.. Grumble...Grrrrr.. Grumble... Grrrrr.. Grr. grumble grrr... Grrrrr.. Grumble... Grrrrr..
         Grr. grumble grrr...Grrrrr.. Grumble... Check it out!</p>
 
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Meet the Bear</a>
+
+    <hr>
 
   </div>
 
@@ -111,6 +113,8 @@
 
   <div style="background: url(https://png.pngtree.com/thumb_back/fw800/20160920/pngtree-Honeycomb-Framework-Supporting-Structure-Structure-background-photo-679472.jpg)"
     class="container-fluid">
+
+    <hr>
 
     <div style="margin: 3rem" class="row">
 
