the final countdown

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div style="background: url(https://png.pngtree.com/thumb_back/fw800/20160920/pngtree-Honeycomb-Framework-Supporting-Structure-Structure-background-photo-679472.jpg)"
     class="jumbotron">
 
-    <h1 class="display-4"><b>A bit about TheBearCode.</b></h1>
+    <h1 class="display-4">A bit about TheBearCode</h1>
 
 
     <p class="lead">
